--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
 
   cupertino_icons: ^1.0.6
   clean_architecture_with_state_management: ^1.1.2
+  #  flutter pub run clean_architecture_with_state_management chat -bloc
 
   bloc: ^8.1.4
   flutter_hooks: ^0.21.1-pre.2
@@ -37,6 +38,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   json_annotation: ^4.9.0
   easy_localization: ^3.0.7
+  dartz: ^0.10.1
 
 
 dev_dependencies:
