--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,58 +2,41 @@ name: pillu_app
 description: "A new Flutter project."
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
 version: 1.0.0+1
 
 environment:
   sdk: '>=3.4.3 <4.0.0'
 
+
 dependencies:
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons: ^1.0.8
+  faker: ^2.1.0
+  file_picker: ^8.0.3
+  firebase_auth: ^5.0.0
+  firebase_core: ^3.0.0
+  firebase_storage: ^12.0.0
   flutter:
     sdk: flutter
-
-  cupertino_icons: ^1.0.6
-  clean_architecture_with_state_management: ^1.1.2
-
-  bloc: ^8.1.4
-  flutter_hooks: ^0.21.1-pre.2
-  flutter_bloc: ^8.1.6
-  bloc_test: ^9.1.7
-  mockito: ^5.4.4
-  nb_utils: ^7.0.3
-
-  get_it: ^7.7.0
-  mix: ^1.4.0
-  provider: ^6.1.2
-  equatable: ^2.0.5
-  fpdart: ^1.1.0
-  go_router: ^14.2.0
-  http: ^1.2.1
-
-  # Code generator
-  envied: ^0.5.4+1
-  freezed: ^2.5.2
-  freezed_annotation: ^2.4.1
-  json_annotation: ^4.9.0
-  easy_localization: ^3.0.7
-  dartz: ^0.10.1
-  flutter_parsed_text: ^2.2.1
-  url_launcher: ^6.3.0
-  flutter_link_previewer:
-    path: lib/flutter_link_previewer-main
   flutter_chat_types:
-    path: lib/flutter_chat_types-main
+    path: ./lib/flutter_chat_types-main
   flutter_chat_ui:
-    path: lib/flutter_chat_ui-main
+    path: ./lib/flutter_chat_ui-main
+  flutter_firebase_chat_core:
+    path: ./lib/flutter_firebase_chat_core-main
+  http: '>=0.13.6 <2.0.0'
+  image_picker: ^1.1.2
+  mime: ^1.0.5
+  open_filex: ^4.4.0
+  path_provider: ^2.1.3
 
 dev_dependencies:
+  dart_code_metrics: ^5.7.6
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^3.0.0
-  build_runner: ^2.4.11
-  json_serializable: ^6.8.0
-  envied_generator: ^0.5.4+1
-
 flutter:
+
   uses-material-design: true
