--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,14 @@ version: 1.0.0+1
 environment:
   sdk: '>=3.4.3 <4.0.0'
 
-
 dependencies:
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  flutter_linkify: ^6.0.0
+  html: ^0.15.4
+  linkify: ^5.0.0
+  equatable: ^2.0.5
+  json_annotation: ^4.8.1
+  meta: '>=1.8.0 <2.0.0'
+  cloud_firestore: ^5.0.0
   cupertino_icons: ^1.0.8
   faker: ^2.1.0
   file_picker: ^8.0.3
@@ -19,12 +23,13 @@ dependencies:
   firebase_storage: ^12.0.0
   flutter:
     sdk: flutter
-  flutter_chat_types:
-    path: ./lib/flutter_chat_types-main
-  flutter_chat_ui:
-    path: ./lib/flutter_chat_ui-main
-  flutter_firebase_chat_core:
-    path: ./lib/flutter_firebase_chat_core-main
+  diffutil_dart: '>=3.0.0 <5.0.0'
+  flutter_parsed_text: ^2.2.1
+  intl: '>=0.17.0 <1.0.0'
+  photo_view: ^0.15.0
+  scroll_to_index: ^3.0.1
+  url_launcher: '>=6.1.12 <7.0.0'
+  visibility_detector: ^0.4.0+2
   http: '>=0.13.6 <2.0.0'
   image_picker: ^1.1.2
   mime: ^1.0.5
@@ -34,9 +39,32 @@ dependencies:
 dev_dependencies:
   dart_code_metrics: ^5.7.6
   flutter_lints: ^4.0.0
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
   flutter_test:
     sdk: flutter
 
 flutter:
-
   uses-material-design: true
+  assets:
+    - lib/flutter_chat_ui-main/lib/assets/icon-arrow.png
+    - lib/flutter_chat_ui-main/lib/assets/icon-attachment.png
+    - lib/flutter_chat_ui-main/lib/assets/icon-delivered.png
+    - lib/flutter_chat_ui-main/lib/assets/icon-document.png
+    - lib/flutter_chat_ui-main/lib/assets/icon-error.png
+    - lib/flutter_chat_ui-main/lib/assets/icon-seen.png
+    - lib/flutter_chat_ui-main/lib/assets/icon-send.png
+    - lib/flutter_chat_ui-main/lib/assets/2.0x/icon-arrow.png
+    - lib/flutter_chat_ui-main/lib/assets/2.0x/icon-attachment.png
+    - lib/flutter_chat_ui-main/lib/assets/2.0x/icon-delivered.png
+    - lib/flutter_chat_ui-main/lib/assets/2.0x/icon-document.png
+    - lib/flutter_chat_ui-main/lib/assets/2.0x/icon-error.png
+    - lib/flutter_chat_ui-main/lib/assets/2.0x/icon-seen.png
+    - lib/flutter_chat_ui-main/lib/assets/2.0x/icon-send.png
+    - lib/flutter_chat_ui-main/lib/assets/3.0x/icon-arrow.png
+    - lib/flutter_chat_ui-main/lib/assets/3.0x/icon-attachment.png
+    - lib/flutter_chat_ui-main/lib/assets/3.0x/icon-delivered.png
+    - lib/flutter_chat_ui-main/lib/assets/3.0x/icon-document.png
+    - lib/flutter_chat_ui-main/lib/assets/3.0x/icon-error.png
+    - lib/flutter_chat_ui-main/lib/assets/3.0x/icon-seen.png
+    - lib/flutter_chat_ui-main/lib/assets/3.0x/icon-send.png
