--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,10 @@ dependencies:
   http: '>=0.13.6 <2.0.0'
   image_picker: ^1.1.2
   mime: ^1.0.5
-  open_filex: ^4.4.0
+  open_filex: ^4.5.0
   path_provider: ^2.1.3
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   dart_code_metrics: ^5.7.6
