--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,12 @@
-org.gradle.jvmargs=-Xmx4G -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.jvmargs=-Xmx4096m -XX:MaxPermSize=1024m -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.parallel=true
+org.gradle.configureondemand=true
+org.gradle.daemon=true
+org.gradle.caching=true
 android.useAndroidX=true
 android.enableJetifier=true
+android.enableR8=true
+android.enableD8=true
+kotlin.code.style=official
+kotlin.version=1.9.24
+kotlin.jvm.target=17
