--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   weather_animation: ^1.1.2
   provider: ^6.1.2
   supabase_flutter: ^2.8.3
+  firebase_remote_config: ^5.4.0
 
 dev_dependencies:
   dart_code_metrics: ^5.7.6
