--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   http: '>=0.13.6 <2.0.0'
   image_picker: ^1.1.2
   mime: ^2.0.0
-  open_filex: ^4.6.0
+#  open_filex: ^4.6.0
   path_provider: ^2.1.3
   bloc: ^9.0.0
   flutter_bloc: ^9.0.0
@@ -44,6 +44,7 @@ dependencies:
   provider: ^6.1.2
   supabase_flutter: ^2.8.3
   firebase_remote_config: ^5.4.1
+  open_file: ^3.5.10
 
 dev_dependencies:
   flutter_lints: ^5.0.0
