--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   firebase_auth: ^5.5.0
   firebase_core: ^3.12.0
   firebase_storage: ^12.4.3
+  flutter_hooks: ^0.20.5
   flutter:
     sdk: flutter
   diffutil_dart: '>=3.0.0 <5.0.0'
