- final chat changes

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -23,7 +23,7 @@ analyzer:
     - "build/**"
     - ".dart_tool/**"
     # Assets
-    - "assets/**"
+    - "pillu_assets/**"
     - "bricks/**"
 
   plugins:
