fix(auth): safely cache and stream chat user updates with cancellation
- Added in-memory caching for Firebase chat user to reduce delay in user retrieval
- Listens to Firebase stream and updates both stream controller and auth state
- Ensured add calls are only made when BLoC and controller are open
- Subscribed to Firebase stream in a cancellable way to avoid leaks or crashes
- Cancelled Firebase stream in BLoC close to maintain stability and prevent Bad state errors

--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,10 @@ doc/api/
 
 .flutter-plugins
 .flutter-plugins-dependencies
-/.idea/
+/.idea/caches/
+/.idea/libraries/
+/.idea/runConfigurations/
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/vcs.xml
+/.idea/workspace.xml
