--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   supabase_flutter: ^2.8.3
   firebase_remote_config: ^5.4.1
   open_file: ^3.5.10
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
