--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   file_picker: ^9.0.0
   firebase_auth: ^5.5.0
   firebase_core: ^3.12.0
-  firebase_storage: ^12.4.3
+  firebase_storage: ^12.4.6
   flutter_hooks: ^0.20.5
   flutter:
     sdk: flutter
@@ -44,6 +44,7 @@ dependencies:
   firebase_remote_config: ^5.4.1
   open_file: ^3.5.10
   uuid: ^4.5.1
+  shimmer_animation: ^2.2.2
 
 dev_dependencies:
   flutter_lints: ^5.0.0
